--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "symfony/intl": "7.3.*",
         "symfony/mailer": "7.3.*",
         "symfony/mime": "7.3.*",
-        "symfony/monolog-bundle": "^3.10",
+        "symfony/monolog-bundle": "*",
         "symfony/notifier": "7.3.*",
         "symfony/process": "7.3.*",
         "symfony/property-access": "7.3.*",
@@ -50,6 +50,10 @@
         "twig/twig": "^2.12|^3.21.1"
     },
     "config": {
+        "use-zip-archive": true,
+        "preferred-install": {
+            "*": "dist"
+        },
         "allow-plugins": {
             "php-http/discovery": true,
             "symfony/flex": true,
@@ -76,7 +80,8 @@
         "symfony/polyfill-php74": "*",
         "symfony/polyfill-php80": "*",
         "symfony/polyfill-php81": "*",
-        "symfony/polyfill-php82": "*"
+        "symfony/polyfill-php82": "*",
+        "yoeunes/regex-parser": "*"
     },
     "scripts": {
         "auto-scripts": {
