--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,6 +13,11 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        google:
+            pattern: ^/connect/google
+            lazy: true
+            custom_authenticator:
+                - App\Security\GoogleAuthenticator
         main:
             lazy: true
             provider: app_user_provider
@@ -38,6 +43,7 @@ security:
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/connect/google, roles: PUBLIC_ACCESS }
 
 when@test:
     security:
