--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@ services:
     php:
         build: docker/php
         volumes:
-            - .:/var/www/app
+            - .:/var/www/app:cached
 
     nginx:
         image: nginx:alpine
         ports:
             - "8080:80"
         volumes:
-            - .:/var/www/app
+            - .:/var/www/app:cached
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             - php
