dockr changes for composer

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,9 +1,22 @@
-FROM php:8.2-fpm
+FROM php:8.4-fpm
 
-# Dépendances système
+# Dépendances système nécessaires
 RUN apt-get update && apt-get install -y \
-    git unzip libicu-dev libzip-dev \
-    && docker-php-ext-install intl pdo pdo_mysql zip
+    git unzip \
+    libicu-dev \
+    libzip-dev \
+    libpng-dev \
+    libjpeg-dev \
+    libfreetype6-dev \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install \
+        gd \
+        intl \
+        pdo \
+        pdo_mysql \
+        zip \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 # Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
