Add success handler for Google OAuth2 authentication
- Implement `GoogleAuthenticationSuccessHandler` to handle user data post-login.
- Add `googleId` property to `User` entity with unique constraint.
- Update `GoogleAuthenticator` for better user management and session handling.
- Enable `autowire` and `autoconfigure` for service definitions in `services.yaml`.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,7 @@ security:
 
             custom_authenticators:
                 - App\Security\GoogleAuthenticator
+            success_handler: App\Security\GoogleAuthenticationSuccessHandler
 
             logout:
                 path: app_logout
