--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,29 +1,60 @@
 name: CI
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    push:
+        branches: [ "master" ]
+    pull_request:
+        branches: [ "master" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build-and-test:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+        services:
+            mysql:
+                image: mysql:8.0
+                env:
+                    MYSQL_DATABASE: futevent_test
+                    MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+                ports:
+                    - 3306:3306
+                options: >-
+                    --health-cmd="mysqladmin ping"
+                    --health-interval=10s
+                    --health-timeout=5s
+                    --health-retries=5
 
-      - name: Build Docker image
-        run: docker build -t futevent-php -f docker/php/Dockerfile .
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
 
-      - name: Run Composer install
-        run: |
-          docker run --rm \
-            -v ${{ github.workspace }}:/var/www/app \
-            futevent-php \
-            composer install --no-interaction --no-progress --prefer-dist
+            - name: Build PHP Docker image
+              run: docker build -t futevent-php -f docker/php/Dockerfile .
 
-      - name: Check PHP extensions
-        run: |
-          docker run --rm futevent-php php -m | grep gd
+            - name: Install Composer dependencies
+              run: |
+                  docker run --rm \
+                    -v ${{ github.workspace }}:/var/www/app \
+                    -e APP_ENV=test \
+                    futevent-php \
+                    composer install --no-interaction --prefer-dist
+
+            - name: Prepare test database
+              run: |
+                  docker run --rm \
+                    -v ${{ github.workspace }}:/var/www/app \
+                    -e APP_ENV=test \
+                    -e DATABASE_URL="mysql://root:@mysql:3306/futevent_test?serverVersion=8.0" \
+                    --network ${{ job.services.mysql.network }} \
+                    futevent-php \
+                    php bin/console doctrine:schema:update --force
+
+            - name: Run PHPUnit
+              run: |
+                  docker run --rm \
+                    -v ${{ github.workspace }}:/var/www/app \
+                    -e APP_ENV=test \
+                    -e DATABASE_URL="mysql://root:@mysql:3306/futevent_test?serverVersion=8.0" \
+                    --network ${{ job.services.mysql.network }} \
+                    futevent-php \
+                    php bin/phpunit --testdox
