--- a/.env.test
+++ b/.env.test
@@ -2,4 +2,4 @@
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 
-DATABASE_URL="mysql://root:@db:3306/futevent_test?serverVersion=8.0"
+DATABASE_URL="mysql://root:@db:3306/futevent?serverVersion=8.0"
