--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -5,13 +5,36 @@ server {
     root /var/www/app/public;
     index index.php;
 
+    gzip on;
+    gzip_comp_level 5;
+    gzip_min_length 1000;
+    gzip_types
+        text/plain
+        text/css
+        application/javascript
+        application/json
+        image/svg+xml;
+
     location / {
         try_files $uri /index.php$is_args$args;
+    }
+
+    location ~* \.(css|js|png|jpg|jpeg|gif|svg|webp|woff2?)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
     }
 
     location ~ \.php$ {
         fastcgi_pass php:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
+        fastcgi_read_timeout 300;
+    }
+
+    location ~ /\. {
+        deny all;
     }
 }
