--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,10 @@ security:
             lazy: true
             provider: app_user_provider
 
+            login_throttling:
+                max_attempts: 5
+                interval: "3 minutes"
+
             entry_point: form_login
 
             form_login:
